--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,3 @@
-/*
-Theme Name:     Cryptocurrency
-Theme URI:      https://cryptocurrency-html.fruitfulcode.com/
-Author:         fruitfulcode
-Author URI:     https://fruitfulcode.com/
-Description:    
-Version:        1.0
-License:        GNU General Public License v2 or later
-License URI:    http://www.gnu.org/licenses/gpl-2.0.html
-*/
-
-/**
-	Navigation Files
-
-	01. Info
-	02. Reset
-	03. Base Style
-	04. Header Style
-	05. Elements
-	06. Footer
-	07. Slider
-	08. About Us
-	09. Trade Currency
-	10. Contact
-	11. Blog Grid
-	12. Blog Widget
-	13. Blog List
-	14. Single Blog
-	15. Login Signup
-	16. Faq
-	17. Error Page
-	18. Calculator
-	19. Style For Ie
-
- */
-
-/*=================================
-=            02. Reset            =
-=================================*/
 
 html,
 body,
@@ -120,11 +81,208 @@ mark,
 audio,
 video {
     margin: 0;
-    padding: 0;
-    border: 0;
     font-size: 100%;
     vertical-align: baseline;
 }
+
+      
+
+@media(max-width:767px) {
+    .registration_quote {
+        font-size: 1.8em !important;
+    }
+    .text,
+    .overview-pricing-cta p {
+        text-align: center !important;
+        padding-left: none !important;
+        width: 100% !important;
+    }
+    .padd {
+        padding-top: 200px !important
+    }
+    .second-section {
+        padding-top: 380px !important;
+    }
+    #accordion ul li {
+        color: #3a3864;
+        font-size: 14px;
+        line-height: 28px;
+        font-weight: 400;
+        margin-left: 15px;
+    }
+    .form-box {
+        float: none !important;
+        display: inline-block;
+        width: 100% !important;
+        border-radius: 8px !important;
+    }
+    .form-box-col {
+        text-align: center;
+    }
+    .form-box .form-group,
+    h4 {
+        text-align: left !important;
+    }
+    .first-section h1 {
+        font-size: 1.7em !important;
+    }
+    .first-section p {
+        font-size: 0.8em !important;
+    }
+}
+@media(min-width:767px) {
+   
+    #accordion ul li {
+        color: #3a3864;
+        font-size: 18px;
+        line-height: 28px;
+        font-weight: 400;
+        margin-left: 15px;
+    }
+}
+
+@media(max-width: 991px) {
+    .first-section {
+        background-position-y: bottom !important;
+        max-height: 653px !important;
+        padding: 180px 0 0 !important;
+    }
+}
+
+ul.breadcrumbs {
+    padding-left: 0;
+    padding-bottom: 40px;
+    font-size: .8em;
+    line-height: 1em;
+    margin-right: 10px;
+    opacity: .75;
+    white-space: nowrap;
+}
+
+ul.breadcrumbs li {
+    float: left;
+    list-style-type: none;
+    margin: 0 5px;
+    color: #fff;
+}
+
+ul.breadcrumbs li a {
+    text-decoration: underline;
+    color: #fff;
+}
+
+.first-section {
+    background-position: left bottom !important;
+    background-size: cover !important;
+}
+
+
+html,
+body {
+    overflow-x: hidden !important;
+}
+
+h2 {
+    font-weight: 400;
+    margin: .7em 0;
+    font-size: 2.25em;
+}
+
+article p {
+    margin-top: 15px;
+    color: black !important;
+}
+
+article {
+    margin-top: 15px;
+}
+
+@media(min-width: 992px) and (max-width: 1200px) {
+    .header-block ul li a {
+        font-size: 14px;
+    }
+}
+
+.message-form .blue-brd-btn {
+    background: #fff;
+}
+
+.message-form {
+    padding: 32px 32px;
+    background-color: #eef0f2;
+}
+
+
+.blue-brd-btn:hover {
+    cursor: pointer;
+    color: white !important;
+    background: #000;
+}
+
+.accordion-header button {
+    color: #131149;
+    font-size: 20px;
+    font-weight: 700;
+    width: 100%;
+    text-align: left;
+    text-decoration: none;
+    padding: 31px 65px 31px 30px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    white-space: normal;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    text-decoration: none;
+}
+
+.accordion-header button:hover {
+    text-decoration: none;
+    color: #131149;
+}
+
+.accordion-header button:active,
+.accordion-header button:focus {
+    text-decoration: none;
+    color: #131149;
+}
+
+.accordion-body ul li {
+    color: #3a3864;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+    margin-left: 15px;
+}
+
+.form-box {
+    border-radius: 15px;
+    box-shadow: 0px 2px 0px lightgrey, 0 5px 2px -1px lightgrey, 0px 0 0px -5px lightgrey;
+}
+
+#enquiryform input,
+#enquiryform select,
+#enquiryform textarea {
+    border-color: #f2f2f2 !important;
+    outline: none;
+    background-color: #f2f2f2;
+}
+
+#enquiryform label {
+    font-weight: bold;
+}
+
+.blue-brd-btn {
+    background: #131149;
+    color: #fff;
+    border-color: #131149 !important;
+    border-radius: 5px;
+}
+
+
 
 /* HTML5 display-role reset for older browsers */
 
@@ -193,25 +351,12 @@ iframe {
     width: 100%;
 }
 
-/*=====  End of 02. Reset  ======*/
-
-/*======================================
-=            03. Base Style            =
-======================================*/
-
-/**
-	Navigation File
-
-	01. Global Style
-	02. Custom Fonts
-	03. Text Head
-	04. Base Style Form
-	05. Typography
-
- */
-
-/* 01. Global Style
-   ==================================== */
+.back-to-top {
+    position: fixed;
+    right: 68px;
+    bottom: 50px;
+    z-index: 99;
+}
 
 body {
     font-family: 'Muli', sans-serif;
@@ -283,9 +428,6 @@ p {
 }
 
 .blue-brd-btn:hover {
-    /*background: #20add0;
-  color: #fff;
-*/
     background: #000;
     color: #fff;
     text-decoration: none;
@@ -319,19 +461,6 @@ p {
     margin-bottom: 20px;
 }
 
-/* 02. Custom Fonts
-   ==================================== */
-
-@font-face {
-    font-family: "Myriad-Pro-Regular";
-    src: url("../fonts/Myriad-Pro Regular.eot");
-    src: url("../fonts/Myriad-Pro Regular.ttf") format("truetype"), url("../fonts/Myriad-Pro Regular.woff") format("woff"), url("../fonts/Myriad-Pro Regular.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* 03. Text Head
-   ==================================== */
 
 .text-head h5 {
     font-size: 18px;
@@ -339,8 +468,6 @@ p {
     margin-bottom: 25px;
 }
 
-/* 04. Base Style Form
-   ==================================== */
 
 form.custom-form input,
 form.custom-form textarea {
@@ -401,46 +528,6 @@ form.custom-form .form-group {
     display: inline-block;
 }
 
-/* 05. Typography
-   ==================================== */
-
-.typography h1,
-.typography h2,
-.typography h3,
-.typography h4,
-.typography h5,
-.typography h6 {
-    margin-bottom: 30px;
-    color: #110f46;
-}
-
-.typography h1 span,
-.typography h2 span,
-.typography h3 span,
-.typography h4 span,
-.typography h5 span,
-.typography h6 span {
-    font-weight: 700;
-}
-
-.typography h1 span,
-.typography h2 span,
-.typography h3 span {
-    font-size: 22px;
-    font-weight: bold;
-}
-
-.typography h4 span {
-    font-size: 22px;
-}
-
-.typography h5 span {
-    font-size: 18px;
-}
-
-.typography h6 span {
-    font-size: 16px;
-}
 
 .line-black {
     width: 100%;
@@ -551,7 +638,7 @@ header .nav-menu span {
 
 header .nav-menu li {
     position: relative;
-    padding: 43px 21px;
+    padding: 20px;
     list-style: none;
     transition: 0.2s linear;
 }
@@ -1588,71 +1675,9 @@ footer .footer-social-wrapper {
     text-shadow: 1px 1px 5px #000;
 }
 
-.first-section.not-images .text {
-    max-width: 100%;
-    text-align: center;
-}
-
-.first-section.bg2 {
-    background: url(../img/first-section-bg-contact.png) no-repeat;
-}
-
-.first-section .cloud,
-.first-section .cloud-two,
-.first-section .mini-cloud,
-.first-section .mini-cloud.two,
-.first-section .mini-cloud.three {
-    left: 0;
-    position: absolute;
-    display: inline-block;
-}
-
-.first-section .cloud {
-    width: 130px;
-    top: 32%;
-    height: 23px;
-    background: url(../img/cloud.png) no-repeat;
-    animation: cloud_one 250s infinite;
-    animation-timing-function: linear !important;
-}
-
-.first-section .cloud-two {
-    top: 47%;
-    width: 210px;
-    height: 30px;
-    background: url(../img/cloud2.png) no-repeat;
-    animation: cloud_two 300s infinite;
-    animation-timing-function: linear !important;
-}
-
-.first-section .mini-cloud {
-    animation: mini_cloud 500s infinite;
-}
-
-.first-section .mini-cloud.two {
-    animation: mini_cloud 350s infinite;
-}
-
-.first-section .mini-cloud.three {
-    animation: mini_cloud 350s infinite;
-}
-
-.first-section .mini-cloud,
-.first-section .mini-cloud.two,
-.first-section .mini-cloud.three {
-    top: 16%;
-    width: 32px;
-    height: 20px;
-    background: url(../img/mini-cloud.png) no-repeat;
-    animation-timing-function: linear !important;
-}
-
-.first-section .mini-cloud.two {
-    top: 55%;
-}
-
-.first-section .mini-cloud.three {
-    top: 81%;
+.bg-header {
+    background: url(../assets/img/background-section-straight.jpg) no-repeat;
+    margin-top: 80px !important;
 }
 
 .text-about {
